tooling/nargo_cli/tests/snapshots/execution_success/cast_signed_to_u1/execute__tests__force_brillig_false_inliner_9223372036854775807.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [
      {
        "name": "zero",
        "type": {
          "kind": "integer",
          "sign": "signed",
          "width": 32
        },
        "visibility": "private"
      },
      {
        "name": "one",
        "type": {
          "kind": "integer",
          "sign": "signed",
          "width": 32
        },
        "visibility": "private"
      },
      {
        "name": "two",
        "type": {
          "kind": "integer",
          "sign": "signed",
          "width": 32
        },
        "visibility": "private"
      },
      {
        "name": "three",
        "type": {
          "kind": "integer",
          "sign": "signed",
          "width": 32
        },
        "visibility": "private"
      },
      {
        "name": "minus_one",
        "type": {
          "kind": "integer",
          "sign": "signed",
          "width": 32
        },
        "visibility": "private"
      },
      {
        "name": "minus_two",
        "type": {
          "kind": "integer",
          "sign": "signed",
          "width": 32
        },
        "visibility": "private"
      },
      {
        "name": "minus_three",
        "type": {
          "kind": "integer",
          "sign": "signed",
          "width": 32
        },
        "visibility": "private"
      }
    ],
    "return_type": null,
    "error_types": {}
  },
  "bytecode": [
    "func 0",
    "current witness index : _20",
    "private parameters indices : [_0, _1, _2, _3, _4, _5, _6]",
    "public parameters indices : []",
    "return value indices : []",
    "BLACKBOX::RANGE [_0]:32 bits []",
    "BLACKBOX::RANGE [_1]:32 bits []",
    "BLACKBOX::RANGE [_2]:32 bits []",
    "BLACKBOX::RANGE [_3]:32 bits []",
    "BLACKBOX::RANGE [_4]:32 bits []",
    "BLACKBOX::RANGE [_5]:32 bits []",
    "BLACKBOX::RANGE [_6]:32 bits []",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _0) 0 ], EXPR [ 2 ]], outputs: [_7, _8]",
    "BLACKBOX::RANGE [_7]:31 bits []",
    "EXPR [ (1, _0) (-2, _7) (-1, _8) 0 ]",
    "EXPR [ (1, _8) 0 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _1) 0 ], EXPR [ 2 ]], outputs: [_9, _10]",
    "BLACKBOX::RANGE [_9]:31 bits []",
    "EXPR [ (1, _1) (-2, _9) (-1, _10) 0 ]",
    "EXPR [ (1, _10) -1 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _2) 0 ], EXPR [ 2 ]], outputs: [_11, _12]",
    "BLACKBOX::RANGE [_11]:31 bits []",
    "EXPR [ (1, _2) (-2, _11) (-1, _12) 0 ]",
    "EXPR [ (1, _12) 0 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _3) 0 ], EXPR [ 2 ]], outputs: [_13, _14]",
    "BLACKBOX::RANGE [_13]:31 bits []",
    "EXPR [ (1, _3) (-2, _13) (-1, _14) 0 ]",
    "EXPR [ (1, _14) -1 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _4) 0 ], EXPR [ 2 ]], outputs: [_15, _16]",
    "BLACKBOX::RANGE [_15]:31 bits []",
    "EXPR [ (1, _4) (-2, _15) (-1, _16) 0 ]",
    "EXPR [ (1, _16) -1 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _5) 0 ], EXPR [ 2 ]], outputs: [_17, _18]",
    "BLACKBOX::RANGE [_17]:31 bits []",
    "EXPR [ (1, _5) (-2, _17) (-1, _18) 0 ]",
    "EXPR [ (1, _18) 0 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _6) 0 ], EXPR [ 2 ]], outputs: [_19, _20]",
    "BLACKBOX::RANGE [_19]:31 bits []",
    "EXPR [ (1, _6) (-2, _19) (-1, _20) 0 ]",
    "EXPR [ (1, _20) -1 ]",
    "unconstrained func 0",
    "[Const { destination: Direct(10), bit_size: Integer(U32), value: 2 }, Const { destination: Direct(11), bit_size: Integer(U32), value: 0 }, CalldataCopy { destination_address: Direct(0), size_address: Direct(10), offset_address: Direct(11) }, BinaryFieldOp { destination: Direct(2), op: IntegerDiv, lhs: Direct(0), rhs: Direct(1) }, BinaryFieldOp { destination: Direct(1), op: Mul, lhs: Direct(2), rhs: Direct(1) }, BinaryFieldOp { destination: Direct(1), op: Sub, lhs: Direct(0), rhs: Direct(1) }, Mov { destination: Direct(0), source: Direct(2) }, Stop { return_data: HeapVector { pointer: Direct(11), size: Direct(10) } }]"
  ],
  "debug_symbols": "[debug_symbols]",
  "file_map": "[file_map]",
  "expression_width": {
    "Bounded": {
      "width": 4
    }
  }
}
